// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup should apply switchDirection and direction props 1`] = `
<WithLoading
  className="some-class"
  direction="column"
  switchDirection="medium"
>
  <WithLoading
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </WithLoading>
  <WithLoading
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </WithLoading>
</WithLoading>
`;

exports[`RadioButtonGroup should match the snapshot 1`] = `
<WithLoading
  className="some-class"
  direction="row"
>
  <WithLoading
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </WithLoading>
  <WithLoading
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </WithLoading>
</WithLoading>
`;
